# 24febfattyurl

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  input.css  manage.py  pyproject.toml  requirements.txt  urls_bulk_import.csv  urls_export.csv
.claude/: settings.local.json
api/: authentication.py  serializers.py  urls.py  views.py
core/: admin.py  context_processors.py  forms.py  middleware.py  models.py  sitemaps.py  utils.py  views.py
core/management/commands/: make_superuser.py
core/migrations/: 0001_initial.py
core/templatetags/: core_tags.py
fattyurl/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: custom.css  main.css
static/js/: app.js
templates/: 404.html  base.html  home.html  redirect_loading.html
templates/account/: login.html  signup.html
templates/dashboard/: link_detail.html  links.html
templates/pages/: about.html  bitly_alternative.html  contact.html  migrate.html  privacy.html  promise.html  terms.html
templates/partials/: shorten_result.html  slug_check.html
templates/qr/: generator.html
