[project]
name = "24febfattyurl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=41.0",
    "django>=5.0,<7.0",
    "django-allauth>=65.0",
    "django-debug-toolbar>=5.0",
    "djangorestframework>=3.15",
    "gunicorn>=21.2",
    "pyjwt>=2.8",
    "django-environ>=0.11",
    "qrcode[pil]>=8.0",
    "user-agents>=2.2",
    "whitenoise>=6.5",
    "requests>=2.32.5",
]
